--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.background-image {
+    background: url('background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
